tests/core/invalid_assign.sy
start :: fn do
    a := 1
    a = 0.1
    a
end
// error: $MissmatchAssign{ expected: Type::Int, got: Type::Float }
